--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-  <title>Game UI Shell - light roguelike skin</title>
+  <title>Game UI Shell - mobile safe-fit</title>
   <style>
     :root {
+      /* we'll update --app-h dynamically with JS to be the REAL visible height */
+      --app-h: 100dvh;
       --max-phone-width: 420px;
 
-      /* layout band heights */
+      /* layout band heights (percent of the device container, not the viewport) */
       --top-height: 11vh;
       --inventory-height: 12vh;
       --bottom-height: 11vh;
 
-      /* softer, lighter game palette */
       --page-bg-start: #eceff6;
       --page-bg-end: #cfd5e8;
-
       --device-bg-start: #f8f9ff;
       --device-bg-end: #dfe4f8;
 
@@ -33,7 +33,6 @@
 
       --accent-red-start: #ff6b6b;
       --accent-red-end: #ff9e9e;
-
       --accent-blue-start: #4da9ff;
       --accent-blue-end: #9fd2ff;
 
@@ -55,7 +54,6 @@
       --border-radius-slot: 14px;
       --border-radius-btn: 16px;
 
-      /* type scale */
       --fs-xxs: 0.7rem;
       --fs-xs: 0.8rem;
       --fs-sm: 0.9rem;
@@ -84,12 +82,17 @@
       padding: 16px;
     }
 
-    /* phone shell - make it feel like a handheld console frame */
+    /* ======= key change: device now has JS-locked height ======= */
     .device {
       position: relative;
       width: 100%;
       max-width: var(--max-phone-width);
-      height: clamp(600px, 100dvh, 900px);
+
+      /* instead of height: 100dvh; we use the custom property --app-h */
+      height: var(--app-h);
+      min-height: 600px;
+      max-height: 900px;
+
       background: radial-gradient(circle at 50% 0%, var(--device-bg-start) 0%, var(--device-bg-end) 70%);
       border-radius: 28px;
       border: 2px solid rgba(26,30,47,0.4);
@@ -100,9 +103,9 @@
       overflow: hidden;
       display: flex;
       flex-direction: column;
+      background-clip: padding-box;
     }
 
-    /* decorative corner screws / rivets for game feel */
     .device::before,
     .device::after {
       content: '';
@@ -113,18 +116,10 @@
       border-radius: 3px;
       box-shadow: 0 2px 4px rgba(26,30,47,0.4);
     }
-    .device::before {
-      top: 10px;
-      left: 10px;
-    }
-    .device::after {
-      bottom: 10px;
-      right: 10px;
-    }
+    .device::before { top: 10px; left: 10px; }
+    .device::after  { bottom: 10px; right: 10px; }
 
-    /* =========================================================
-       TOP BAR: resources get "chips" instead of flat cards
-       ========================================================= */
+    /* TOP SECTION */
     .top-section {
       flex: 0 0 var(--top-height);
       display: grid;
@@ -157,7 +152,6 @@
       color: var(--text-bright);
       text-shadow: 0 1px 0 rgba(255,255,255,0.8);
     }
-
     .resource-label {
       font-size: var(--fs-xxs);
       font-weight: 600;
@@ -168,9 +162,7 @@
       text-transform: uppercase;
     }
 
-    /* =========================================================
-       PLAY AREA
-       ========================================================= */
+    /* MIDDLE */
     .middle-section {
       flex: 1;
       display: flex;
@@ -180,9 +172,10 @@
       padding-top: 10px;
       padding-bottom: 8px;
       position: relative;
+      min-height: 0; /* important so flex can shrink here */
+      overflow: hidden;
     }
 
-    /* meters live in a mini "status window" */
     .meters-window {
       width: calc(100% - 32px);
       max-width: 360px;
@@ -194,14 +187,10 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
+      flex-shrink: 0;
     }
 
-    .meter-block {
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-    }
-
+    .meter-block { display: flex; flex-direction: column; gap: 6px; }
     .meter-label-row {
       display: flex;
       justify-content: space-between;
@@ -211,7 +200,6 @@
       font-weight: 600;
       text-shadow: 0 1px 0 rgba(255,255,255,0.6);
     }
-
     .meter-bar-outer {
       width: 100%;
       height: 14px;
@@ -223,26 +211,14 @@
         0 -2px 0 rgba(26,30,47,0.18) inset;
       overflow: hidden;
     }
-
     .meter-bar-inner {
       height: 100%;
       border-radius: 4px;
       box-shadow: 0 1px 2px rgba(26,30,47,0.4);
     }
+    .meter-bar-inner.hp    { background: linear-gradient(to right, var(--accent-red-start) 0%, var(--accent-red-end) 100%); width: 50%; }
+    .meter-bar-inner.armor { background: linear-gradient(to right, var(--accent-blue-start) 0%, var(--accent-blue-end) 100%); width: 50%; }
 
-    .meter-bar-inner.hp {
-      background: linear-gradient(to right, var(--accent-red-start) 0%, var(--accent-red-end) 100%);
-      width: 50%;
-    }
-
-    .meter-bar-inner.armor {
-      background: linear-gradient(to right, var(--accent-blue-start) 0%, var(--accent-blue-end) 100%);
-      width: 50%;
-    }
-
-    /* =========================================================
-       ENCOUNTER WINDOW / BATTLE HUD
-       ========================================================= */
     .battle-window {
       width: calc(100% - 32px);
       max-width: 360px;
@@ -257,6 +233,7 @@
       row-gap: 12px;
       align-items: center;
       color: var(--text-primary);
+      flex-shrink: 0;
     }
 
     .battle-side {
@@ -266,13 +243,11 @@
       min-width: 0;
       text-align: center;
     }
-
     .fighter-emoji {
       font-size: var(--fs-xxl);
       line-height: 1;
       filter: drop-shadow(0 3px 2px rgba(26,30,47,0.3));
     }
-
     .fighter-name {
       font-size: var(--fs-sm);
       font-weight: 700;
@@ -281,7 +256,6 @@
       line-height: 1.2;
       text-shadow: 0 1px 0 rgba(255,255,255,0.8);
     }
-
     .fighter-stats {
       font-size: var(--fs-xxs);
       color: var(--text-dim);
@@ -289,7 +263,6 @@
       line-height: 1.3;
       font-weight: 600;
     }
-
     .vs-col {
       padding: 0 10px;
       text-align: center;
@@ -299,7 +272,6 @@
       color: var(--text-primary);
       text-shadow: 0 1px 0 rgba(255,255,255,0.8);
     }
-
     .battle-log {
       grid-column: 1 / span 3;
       border-top: 2px solid rgba(26,30,47,0.25);
@@ -312,9 +284,7 @@
       text-shadow: 0 1px 0 rgba(255,255,255,0.6);
     }
 
-    /* =========================================================
-       LOWER HUD (description band)
-       ========================================================= */
+    /* DESCRIPTION BAND */
     .lower-hud {
       background: var(--window-bg);
       border-top: var(--window-border);
@@ -323,6 +293,7 @@
       padding: 14px 16px;
       color: var(--text-primary);
       flex: 0 0 auto;
+      flex-shrink: 0;
     }
 
     .description-box {
@@ -332,7 +303,6 @@
       flex-direction: column;
       justify-content: center;
     }
-
     .description-title {
       font-size: var(--fs-xs);
       font-weight: 700;
@@ -343,7 +313,6 @@
       line-height: 1.2;
       text-shadow: 0 1px 0 rgba(255,255,255,0.8);
     }
-
     .description-body {
       font-size: var(--fs-sm);
       color: var(--text-primary);
@@ -353,10 +322,7 @@
       text-shadow: 0 1px 0 rgba(255,255,255,0.6);
     }
 
-    /* =========================================================
-       INVENTORY STRIP
-       Style it like console slots => toy-like plastic chips
-       ========================================================= */
+    /* INVENTORY */
     .inventory-row {
       flex: 0 0 var(--inventory-height);
       display: flex;
@@ -370,6 +336,7 @@
       border-top: var(--window-border);
       border-bottom: var(--window-border);
       box-shadow: var(--window-shadow);
+      flex-shrink: 0;
     }
 
     .slot {
@@ -392,7 +359,6 @@
       cursor: pointer;
       position: relative;
     }
-
     .slot.active {
       outline: 3px solid #fff59e;
       outline-offset: 3px;
@@ -400,25 +366,12 @@
         0 0 12px rgba(255,255,150,0.9),
         0 8px 16px rgba(26,30,47,0.3);
     }
+    .slot.dagger  { background: radial-gradient(circle at 50% 0%, #fff 0%, #ffe7c7 60%); }
+    .slot.shield  { background: radial-gradient(circle at 50% 0%, #fff 0%, #d7ecff 60%); }
+    .slot.diamond { background: radial-gradient(circle at 50% 0%, #fff 0%, #fff5bd 60%); }
+    .slot.poultry { background: radial-gradient(circle at 50% 0%, #fff 0%, #d6ffd9 60%); }
 
-    /* individual rarity / type tints like stickers */
-    .slot.dagger {
-      background: radial-gradient(circle at 50% 0%, #fff 0%, #ffe7c7 60%);
-    }
-    .slot.shield {
-      background: radial-gradient(circle at 50% 0%, #fff 0%, #d7ecff 60%);
-    }
-    .slot.diamond {
-      background: radial-gradient(circle at 50% 0%, #fff 0%, #fff5bd 60%);
-    }
-    .slot.poultry {
-      background: radial-gradient(circle at 50% 0%, #fff 0%, #d6ffd9 60%);
-    }
-
-    /* =========================================================
-       BOTTOM CONTROLS
-       Buttons feel like handheld console face buttons
-       ========================================================= */
+    /* CONTROLS */
     .bottom-section {
       flex: 0 0 var(--bottom-height);
       display: flex;
@@ -426,6 +379,7 @@
       align-items: stretch;
       padding: 10px 16px calc(env(safe-area-inset-bottom) + 12px);
       background: radial-gradient(circle at 50% 100%, rgba(255,255,255,0.6) 0%, rgba(210,220,255,0.4) 70%);
+      flex-shrink: 0;
     }
 
     .buttons-area {
@@ -455,12 +409,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      background-clip: padding-box;
     }
 
     .action-btn.primary {
       background: radial-gradient(circle at 50% 0%, var(--btn-a-start) 0%, var(--btn-a-end) 80%);
     }
-
     .action-btn.secondary {
       background: radial-gradient(circle at 50% 0%, var(--btn-b-start) 0%, var(--btn-b-end) 80%);
       color: #fff;
@@ -475,51 +429,56 @@
       letter-spacing: 0.03em;
       pointer-events: none;
     }
-
     .action-btn.secondary .btn-label {
       color: #fff;
       text-shadow: 0 1px 0 rgba(255,255,255,0.6), 0 2px 2px rgba(26,30,47,0.8);
     }
 
-    .action-btn:active {
-      transform: scale(0.96);
+    .action-btn:active { transform: scale(0.96); }
+
+    /* tiny helper chip that we can toggle to suggest fullscreen */
+    .fullscreen-hint {
+      position: absolute;
+      left: 50%;
+      bottom: calc(env(safe-area-inset-bottom) + 4px);
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.7);
+      color: #fff;
+      font-size: 11px;
+      line-height: 1.2;
+      font-family: system-ui, sans-serif;
+      border-radius: 999px;
+      padding: 6px 10px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.4);
+      user-select: none;
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity .25s;
+      white-space: nowrap;
     }
+    .fullscreen-hint.show { opacity: 1; }
   </style>
 </head>
 <body>
-  <main class="device">
-    <!-- TOP RESOURCES -->
+  <main class="device" id="deviceRoot">
     <header class="top-section">
-      <div class="resource-card">
-        <div class="resource-main-row">💰 <span>1,234</span></div>
-        <div class="resource-label">Gold</div>
-      </div>
-      <div class="resource-card">
-        <div class="resource-main-row">✨ <span>56</span></div>
-        <div class="resource-label">Magic</div>
-      </div>
-      <div class="resource-card">
-        <div class="resource-main-row">🕊️ <span>12</span></div>
-        <div class="resource-label">Grace</div>
-      </div>
+      <div class="resource-card"><div class="resource-main-row">💰 <span>1,234</span></div><div class="resource-label">Gold</div></div>
+      <div class="resource-card"><div class="resource-main-row">✨ <span>56</span></div><div class="resource-label">Magic</div></div>
+      <div class="resource-card"><div class="resource-main-row">🕊️ <span>12</span></div><div class="resource-label">Grace</div></div>
     </header>
 
-    <!-- GAME / MIDDLE -->
     <section class="middle-section">
-      <!-- meters area in its own styled window -->
       <section class="meters-window">
         <div class="meter-block">
           <div class="meter-label-row"><span>HP</span><span>5 / 10</span></div>
           <div class="meter-bar-outer"><div class="meter-bar-inner hp" id="hpBar"></div></div>
         </div>
-
         <div class="meter-block">
           <div class="meter-label-row"><span>ARMOR</span><span>5 / 10</span></div>
           <div class="meter-bar-outer"><div class="meter-bar-inner armor" id="armorBar"></div></div>
         </div>
       </section>
 
-      <!-- ENCOUNTER / BATTLE HUD window -->
       <section class="battle-window">
         <div class="battle-side left">
           <div class="fighter-emoji">🧙‍♂️</div>
@@ -536,7 +495,6 @@
       </section>
     </section>
 
-    <!-- DESCRIPTION HUD BAND -->
     <section class="lower-hud">
       <div class="description-box" id="descBox">
         <div class="description-title" id="descTitle">Encounter</div>
@@ -544,25 +502,65 @@
       </div>
     </section>
 
-    <!-- INVENTORY / EQUIPMENT -->
     <div class="inventory-row">
-      <div class="slot dagger" data-title="Steel Dagger" data-desc="Fast, light blade. +2 damage on backstab.">🗡️</div>
-      <div class="slot shield" data-title="Knight Shield" data-desc="Blocks frontal hits. Adds +3 armor.">🛡️</div>
-      <div class="slot diamond" data-title="Sun Gem" data-desc="Sells for a fortune. Rumored to open sealed doors.">💎</div>
-      <div class="slot poultry" data-title="Roast Meat" data-desc="Restores 4 HP when eaten.">🍗</div>
+      <div class="slot dagger"  data-title="Steel Dagger"  data-desc="Fast, light blade. +2 damage on backstab.">🗡️</div>
+      <div class="slot shield"  data-title="Knight Shield" data-desc="Blocks frontal hits. Adds +3 armor.">🛡️</div>
+      <div class="slot diamond" data-title="Sun Gem"       data-desc="Sells for a fortune. Rumored to open sealed doors.">💎</div>
+      <div class="slot poultry" data-title="Roast Meat"    data-desc="Restores 4 HP when eaten.">🍗</div>
     </div>
 
-    <!-- CONTROLS -->
     <nav class="bottom-section">
       <section class="buttons-area">
         <button class="action-btn primary"><span class="btn-label">A</span></button>
         <button class="action-btn secondary"><span class="btn-label">B</span></button>
       </section>
+      <div class="fullscreen-hint" id="fullscreenHint">Add to Home Screen / rotate for full view →</div>
     </nav>
   </main>
 
   <script>
-    // tap items -> update description panel
+    // 1. FIX THE MOBILE RESIZE BUG
+    // Mobile browsers change the meaning of 100vh / 100dvh when the URL bar shows/hides.
+    // We measure the *actual* innerHeight and lock that into a CSS var --app-h.
+    // This prevents the game 'device' from jittering and cropping.
+
+    function setAppHeight() {
+      const real = window.innerHeight; // visible height right now
+      document.documentElement.style.setProperty('--app-h', real + 'px');
+    }
+
+    // run once ASAP
+    setAppHeight();
+
+    // run again on orientation / resize because device safe area changes
+    window.addEventListener('resize', setAppHeight);
+    window.addEventListener('orientationchange', setAppHeight);
+
+    // 2. SUGGEST BETTER VIEWING MODE
+    // Heuristic: if the browser chrome is likely visible (tall address bar),
+    // or we're in portrait on a very short viewport, show a tiny hint.
+
+    const hintEl = document.getElementById('fullscreenHint');
+
+    function maybeShowHint() {
+      const isLandscape = window.matchMedia('(orientation: landscape)').matches;
+      const vh = window.innerHeight;
+      const vw = window.innerWidth;
+
+      // If we're landscape and fairly wide, we assume "good" view → hide hint.
+      // Otherwise, nudge the player to rotate / add to home screen.
+      if (isLandscape && vw > vh * 1.2) {
+        hintEl.classList.remove('show');
+      } else {
+        hintEl.classList.add('show');
+      }
+    }
+
+    maybeShowHint();
+    window.addEventListener('resize', maybeShowHint);
+    window.addEventListener('orientationchange', maybeShowHint);
+
+    // 3. KEEP YOUR EXISTING ITEM INSPECT LOGIC
     const slots = document.querySelectorAll('.slot');
     const descTitle = document.getElementById('descTitle');
     const descBody  = document.getElementById('descBody');
@@ -571,7 +569,6 @@
       slot.addEventListener('click', () => {
         slots.forEach(s => s.classList.remove('active'));
         slot.classList.add('active');
-
         descTitle.textContent = slot.getAttribute('data-title') || 'Item';
         descBody.textContent  = slot.getAttribute('data-desc')  || '';
       });
